If bbcode is disabled at least the switch to plain-text mode is necessary The emoticons button should be always present (added and hidden by css) to handle toggles Fixed the emoticons (forgot to add the replacement in plain-text mode

--- a/Themes/default/css/jquery.sceditor.css
+++ b/Themes/default/css/jquery.sceditor.css
@@ -219,6 +219,7 @@ div.sceditor-dropdown, div.sceditor-dropdown div {
 
 			.sceditor-button-quote div { background: url('../images/bbc/icons/comment.png'); }
 
+			.sceditor-button-emoticon { display:none; }
 			.sceditor-button-emoticon div { background: url('../images/bbc/icons/emoticon_smile.png'); }
 			.sceditor-button-youtube div { background: url('../images/bbc/icons/youtube.png'); }
 			.sceditor-button-date div { background: url('../images/bbc/icons/date_add.png'); }
